# pipe_state_machine

./: .gitignore  CMakeLists.txt  README.md
include/pipe_state_machine/: pipe_state_machine.hpp
src/: CMakeLists.txt  pipe_state_machine.cpp
test/: CMakeLists.txt  test_pipe_state_machine.cpp
